# redteam-ai-agents

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  HANDOFF.md  IMPLEMENTATION_PLAN.md  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_dashboard.bat
.github/: dependabot.yml
agents/: cloud_agent.py  exploit_agent.py  forensics_agent.py  llm_redteam_agent.py  phase_agents.py  post_exploit_agent.py  recon_agent.py  reporting_agent.py  scanner_agent.py  validation_agent.py  vuln_agent.py  webapp_agent.py
api/: server.py
cli/: main.py
config/: authorization.py  settings.py
core/: adversary_profiles.py  approval.py  attack_framework.py  attack_graph.py  base_agent.py  checkpoint.py  compliance.py  content_safety.py  embeddings.py  evidence_store.py  finding_state.py  finding_validator.py  guardrails.py  knowledge_base.py  memory.py  message_bus.py  model_router.py  orchestrator.py  owasp_llm_map.py  owasp_map.py  report_export.py  retest.py  telemetry.py  tracing.py
docs/: CAPABILITY_RESEARCH.md
frontend/: README.md  index.html  package.json  vite.config.js
mcp_layer/: mcp_bridge.py  mcp_config.py  redteam_mcp_server.py
saas/: README.md  __init__.py  api.py  auth.py  crypto.py  schema.py  secrets.py  store.py  tasks.py
scripts/: dashboard.py  demo.py
tests/: conftest.py  test_ad_server.py  test_adversary_profiles.py  test_approval.py  test_attack_framework.py  test_attack_graph.py  test_authorization.py  test_budget_governor.py  (+34 more)
(+11 files in other folders)
